--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,12 @@
 version: 2
 updates:
-  - package-ecosystem: 'npm'
+  - package-ecosystem: cargo
+    directory: '/'
+    open-pull-requests-limit: 10
+    schedule:
+      interval: 'weekly'
+      day: 'sunday'
+  - package-ecosystem: npm
     directory: '/'
     open-pull-requests-limit: 10
     schedule:
