--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,12 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - main
+      - feat/*
       - dev/*
 
 jobs:
-  tests:
+  test-node:
     strategy:
       fail-fast: false
       matrix:
@@ -17,16 +18,48 @@ jobs:
           - macos-latest
           - windows-latest
         node-version:
-          - 16.x
-          - 18.x
+          - 20.x
+          - 22.x
+          - 23.x
     name: Use ${{ matrix.node-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
+
       - uses: dtolnay/rust-toolchain@stable
-      - uses: actions/setup-node@v3
+
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+
       - run: npm install
-      - run: npm run build --if-present
+
+      - run: npm run build
+
       - run: npm run check
+
+  test-node:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    name: Use Bun on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v5
+
+      - uses: dtolnay/rust-toolchain@stable
+
+      - name: 🛠 Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - run: bun install
+
+      - run: bun run build
+
+      - run: bun run check
