--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "node-crc",
-	"version": "2.1.0",
-	"description": "To compute CRC values by providing the length of bits, expression, reflection, an initial value and a final xor value. It has many built-in CRC functions.",
+	"version": "3.0.0",
+	"description": "To compute CRC64 values using built-in functions and pre-built binaries.",
 	"main": "lib/lib.js",
 	"typings": "lib/lib.d.ts",
 	"scripts": {
-		"build": "npm run build:ts && npm run build:neon",
+		"build": "bun run build:ts && bun run build:neon",
 		"build:ts": "tsc",
 		"build:watch": "tsc -w",
 		"build:neon": "cargo-cp-artifact -nc index.node -- cargo build --release --message-format=json-render-diagnostics",
@@ -13,37 +13,27 @@
 		"build:clean": "rimraf target && rimraf bin && cargo clean && mkdir -p bin",
 		"lint": "eslint src tests --fix",
 		"test": "mocha -r ts-node/register tests/**/*.test.ts",
-		"check": "npm run lint && npm run test",
-		"prepublishOnly": "npm run build:bin && npm run lint && npm run test"
+		"check": "bun run lint && bun run test",
+		"prepublishOnly": "bun run build:bin && bun run lint && bun run test"
 	},
 	"engines": {
-		"node": ">=16"
+		"node": ">=20"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/magiclen/node-crc.git"
+		"url": "git+https://github.com/swrlab/node-crc.git"
 	},
-	"keywords": [
-		"node.js",
-		"crc",
-		"crc8",
-		"crc16",
-		"crc32",
-		"crc64"
-	],
+	"keywords": ["node.js", "crc64"],
 	"author": "Magic Len <len@magiclen.org> (https://magiclen.org)",
 	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/magiclen/node-crc/issues"
-	},
-	"homepage": "https://magiclen.org/node-js-crc/",
 	"dependencies": {
-		"@types/node": "^18.11.17",
 		"detect-libc": "^2.0.1"
 	},
 	"devDependencies": {
+		"@swrlab/style-guide": "^1.0.3",
 		"@types/chai": "^4.3.4",
 		"@types/mocha": "^10.0.1",
+		"@types/node": "^18.11.17",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"cargo-cp-artifact": "^0.1.7",
@@ -52,5 +42,6 @@
 		"mocha": "^10.2.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
-	}
+	},
+	"prettier": "@swrlab/style-guide/prettier"
 }
